--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -9,6 +9,7 @@
     &__text {
         cursor: pointer;
         min-height: 3rem;
+        padding: 0.75rem;
 
         &::after {
             content: "";
